# game_base

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: CopyContentsToBinary.cmake  EmbedResources.cmake
res/: cc.txt  icon.rc
src/: base.cpp  pure.cpp
src/game/: game.cpp  game.h  game_cfg.h
src/util/: arena.h
